--- a/third-stage/views/shoppingfullcar.ejs
+++ b/third-stage/views/shoppingfullcar.ejs
@@ -20,10 +20,10 @@
                             </div>
                             <div class='descbox'>
                                 <div class="goodsname"><%=cargoods[i].goodsname%></div>
-                                <div class="goodsdesc"><%=cargoods[i].goodsdesc%></div>
+                                <div class="goodsdesc"><%=cargoods[i].goodssize%></div>
                                 <!-- 价格 -->
                                 <div class="pricebox">
-                                    <p class="goodsprice">￥<span class="danjia"><%=cargoods[i].goodsprice%></span></p>
+                                    <p class="goodsprice"><span class="danjia"><%=cargoods[i].goodsprice%></span></p>
                                     <p class="jinger">123</p>
                                     <!-- 按钮 -->
                                     <div class="btnbox">
