--- a/third-stage/public/stylesheets/car/fullcar.css
+++ b/third-stage/public/stylesheets/car/fullcar.css
@@ -97,6 +97,7 @@ a{
     color:rgb(152, 152, 159);
     font-size:1.2rem;
     border-radius:0.5rem;
+    padding-left:1rem;
 }
 .pricebox{
     width:100%;
