--- a/third-stage/public/stylesheets/details/details.css
+++ b/third-stage/public/stylesheets/details/details.css
@@ -240,7 +240,10 @@
     line-height:2rem;
     margin-right: 0.5rem;
  }
- .grid-option2:hover{
+ /* .grid-option2:hover{
+    
+ } */
+ .checked{
     background:#EC91C3;
     color:white
  }
@@ -274,7 +277,7 @@
  }
  .product-params{
      width: 100%;
-     height: 10rem;
+     /* height: 10rem; */
      background: #fff;
      padding:1rem;
  }
@@ -292,7 +295,7 @@
 }
 .tuwen{
     width: 100%;
-    height: 3rem;
+    /* height: 3rem; */
     margin-top: 0.2rem;
     padding:1rem;
     background: #fff;
@@ -301,4 +304,74 @@
 }
 .tupian img{
     width: 100%;
+}
+
+
+.fenxiang{
+    background:rgba(0,0,0,0.5);
+    height: 100%;
+    width: 100%;
+    top:0;
+    position:absolute;
+    display: none;
+    z-index: 3;
+    position:fixed;
+    bottom:0;
+    left:0;
+}
+.yingcang{
+    width:100%;
+    height:20%;
+    background:#fff;
+    position:absolute;
+    bottom:0rem;
+}
+.yc-top{
+    display: flex;
+    text-align: center;
+    width:100%;
+    background:#fff;
+}
+.flex-1{
+    flex:1;
+}
+.yc-top{
+    padding: 1rem 0rem 0rem 0rem ;
+}
+.yc-top>.flex-1>div{
+    width:3rem;
+    height:2.8rem;
+    border:0.01em solid black;
+    border-radius:50%;
+    text-align: center;
+    margin: 0.2rem auto;
+}
+.yc-top>.flex-1>p{
+    font-size:0.6rem;
+    color:black;
+    margin-top:-0.1rem;
+}
+.weixin{
+    font-size:2rem;
+    margin-top:0.2rem;
+}
+.pengyouquan{
+    width:2rem;
+    margin-top:0.22rem;
+}
+.weibo{
+    font-size:2rem;
+    margin-top:0.2rem;
+}
+.qq{
+    font-size:2rem;
+    margin-top:0.2rem;
+}
+.quxiao{
+    color:#157efb;
+    text-align: center;
+    outline: none;
+    width: 100%;
+    font-size: 20px;
+    border: none;
 }
