--- a/third-stage/views/user.ejs
+++ b/third-stage/views/user.ejs
@@ -9,11 +9,17 @@
     margin: 0 auto;
     background-size:cover
 }
+.photo{
+    position: relative;
+}
 </style>
 <div class="header">
     <div class="header1"><img src="../images/login/返回.png"></div>
     <div class="header2">
-        <div class="photo"><img src="../images/login/14581158913884.png"></div>
+        <div class="photo">
+            <input type="file" style="opacity:0; filter:alpha(opacity=0); height: 85px; width: 85px; position: absolute; top: 0; left: 0; z-index: 9;" onchange="handleFiles(this,'icon')">
+            <img src="../images/login/14581158913884.png" id="icon">        
+        </div>
         <div><div class="yin"><img src="../images/login/deae2906957a4f30a33577a686379f4f.png"></div><div class="yin-span">银卡会员</div></div>
         <div class="phone"><span id="user"></span></div>
     </div>
@@ -112,6 +118,25 @@
     header3.onclick=function(){
         location.href='/index'
     }
+    function handleFiles(obj,id) {
+            file = document.getElementById("icon");
+            var files = obj.files;
+            img = new Image();
+            if(window.URL){
+                //File API
+                img.src = window.URL.createObjectURL(files[0]); //创建一个object URL，并不是你的本地路径
+                img.onload = function(e) {
+                window.URL.revokeObjectURL(this.src); //图片加载后，释放object URL
+                }
+            }
+            file.src=img.src;
+            //上传文件
+                var fd = new FormData(),//实例化一个表单
+                xhr = new XMLHttpRequest();
+                fd.append('headimg', files[0]);//追加图片元素
+                xhr.open('post', 'user.php?act=act_edit_img');//请求方式，请求地址
+                xhr.send(fd);
+        }
 </script>
 
 <% include base/bottom.ejs %>
