--- a/third-stage/views/details.ejs
+++ b/third-stage/views/details.ejs
@@ -136,7 +136,7 @@
 
 
     <!-- 分享链接 -->
-    <div class='fenxiang'>
+    <!-- <div class='fenxiang'>
         <div class='yingcang'>
             <div class='yc-top'>
                 <div class='flex-1'>
@@ -158,7 +158,7 @@
             </div>
             <button class="quxiao">取消</button>
         </div>
-    </div>
+    </div> -->
 <script>
 var xhr;
 if(XMLHttpRequest){
@@ -193,15 +193,20 @@ var back=document.querySelector('#back')
             for(var j = 0 ;j<grid.length;j++){
             grid[j].classList.remove('checked')
         }
-            this.classList.add('checked')
+             this.classList.add('checked')
         }
     }
 
     //加入购物车
-    var sizechuan = document.querySelector('.checked').innerHTML
+    
     var jiaru=document.querySelector('.jiaru')
     console.log(jiaru.id)
+
     jiaru.onclick=function(){
+        //判断权限
+      
+        console.log(document.cookie)
+        var sizechuan = document.querySelector('.checked').innerHTML //先点击再拿尺码选中状态
         // console.log(sizechuan)
         xhr.open('post','/detail',true)
         xhr.setRequestHeader('content-type','application/x-www-form-urlencoded')
