购物车、详情界面

--- a/third-stage/views/checkout.ejs
+++ b/third-stage/views/checkout.ejs
@@ -42,7 +42,7 @@
                                     唯品自营 | <%=data[i].goodsname%>
                             </div>
                             <div class="shop-c-r-goodsdescbox">
-                                <p class="goodsdesc"><%=data[i].goodsdesc%></p>
+                                <p class="goodsdesc"><%=data[i].goodssize%></p>
                                 <p class="goodsdesc"><%=data[i].goodsnum%></p>
                                 <p class="jinerbox">金额：<span class="jiner"><%=data[i].goodsnum*data[i].goodsprice%></span></p>
                                 <p class="goodsprice">￥&nbsp;<span class="price"><%=data[i].goodsprice%></span></p>
