--- a/third-stage/views/user.ejs
+++ b/third-stage/views/user.ejs
@@ -21,7 +21,7 @@
             <img src="../images/login/14581158913884.png" id="icon">        
         </div>
         <div><div class="yin"><img src="../images/login/deae2906957a4f30a33577a686379f4f.png"></div><div class="yin-span">银卡会员</div></div>
-        <div class="phone"><span id="user"></span></div>
+        <div class="phone"><span id="user"><%=result%></span></div>
     </div>
     <div class="header3"><img src="../images/login/首页.png"></div>
 </div>
