--- a/third-stage/public/stylesheets/lastcrazy/UserAddress.css
+++ b/third-stage/public/stylesheets/lastcrazy/UserAddress.css
@@ -35,6 +35,10 @@
     box-sizing: border-box;
     /* background: lightpink; */
 }
+.addinfor{
+    width: 100%;
+    height: 12.6rem;
+}
 .addinfor>h4{
     margin-bottom: 1rem;
     font-weight: 700;
